Add missing API fields to service condition
