# api/openapi.yaml
@@ -229,6 +229,21 @@ components:
           items:
             type: string
             example: ["web", "api"]
+        datacenter:
+          type: string
+          example: "dc1"
+        namespace:
+          type: string
+          example: "default"
+        filter:
+          type: string
+          example: '\"test\" in Service.Tags'
+        cts_user_defined_meta:
+          type: object
+          additionalProperties:
+            type: string
+          example:
+            key: value
         use_as_module_input:
           type: boolean
           default: true
